--- a/Fridge_Shopping_app/Fridge_Shopping_app/MainPage.xaml
+++ b/Fridge_Shopping_app/Fridge_Shopping_app/MainPage.xaml
@@ -1,35 +1,62 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Fridge_Shopping_app.MainPage">
+             xmlns:loc="clr-namespace:Fridge_Shopping_app"
+             x:Class="Fridge_Shopping_app.MainPage"
+             x:DataType="loc:MainPageViewModel"
+             Loaded="ContentPage_Loaded">
+
+    <!-- BindingContext beállítása XAML-ből. Az osztályokra mindig névtér alias-szal kell hivatkozni. -->
+    <!-- A névtereket legtöbb esetben importálni kell a CotentPage attribútumai között 'xmlns:alias' formában. -->
+    <ContentPage.BindingContext>
+        <loc:MainPageViewModel />
+    </ContentPage.BindingContext>
+
+    <ContentPage.Resources>
+        <!-- Sablonokat definiálhatunk erőforrásként, így mindkét listánál használhatjuk. -->
+        <!-- Egyszer kell megírni, mindkét lista elemei ugyanúgy fognak kinézni. -->
+        <DataTemplate x:Key="fridgeCollectionItem" x:DataType="loc:FridgeItem">
+            <HorizontalStackLayout Padding="4">
+                <Border Stroke="LightGray" StrokeThickness="1">
+                    <Label Text="{Binding Name}" FontSize="Medium" FontAttributes="Bold" />
+                    <!-- StringFormat: statikus szöveg beszúrása az adatkötésből jövő érték köré. -->
+                    <Label Text="{Binding Quantity, StringFormat='{0}'}" />
+                    <Label Text="{Binding Exp_date}"/>
+                </Border>
+            </HorizontalStackLayout>
+        </DataTemplate>
+
+        <!-- Stílusokat is definiálhatunk erőforrásként. -->
+        <!-- Ha nem adunk meg kulcsot (x:Key), akkor az összes 'TargetType' típusú UI elemre vonatkozik. -->
+        <!-- Ha van kulcs, akkor csak azok a UI elemek veszik fel a stílust, melyeknél hivatkozunk rá. -->
+        <Style TargetType="Border" x:Key="collectionBorder">
+            <Setter Property="Stroke" Value="DarkSlateGray" />
+            <Setter Property="StrokeThickness" Value="3" />
+            <Setter Property="MinimumHeightRequest" Value="200" />
+        </Style>
+
+    </ContentPage.Resources>
 
     <ScrollView>
         <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a hovercraft number nine" />
+        Padding="30,0"
+        Spacing="10">
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+            <Grid ColumnDefinitions="1*,1*,1*" ColumnSpacing="10">
+                <Button Grid.Column="0" Text="New" Command="{Binding NewItemCommand}" />
+                <Button Grid.Column="1" Text="Edit" Command="{Binding EditItemCommand}" />
+                <Button Grid.Column="2" Text="Delete" Command="{Binding DeleteItemCommand}" />
+            </Grid>
+            <!-- StringFormat: statikus szöveg beszúrása az adatkötésből jövő érték köré. -->
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+            <Border Style="{StaticResource collectionBorder}">
+                <CollectionView
+                ItemsSource="{Binding ItemsInFridge}"
+                SelectedItem="{Binding SelectedItem}"
+                SelectionMode="Single"
+                ItemTemplate="{StaticResource fridgeCollectionItem}" />
+            </Border>
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
         </VerticalStackLayout>
     </ScrollView>
 
