--- a/Fridge_Shopping_app/Fridge_Shopping_app/FridgeEditorPage.xaml
+++ b/Fridge_Shopping_app/Fridge_Shopping_app/FridgeEditorPage.xaml
@@ -2,12 +2,12 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:loc="clr-namespace:Fridge_Shopping_app"
-             x:Class="Fridge_Shopping_app.EditorPage"
-             Title="EditorPage"
-             x:DataType="loc:EditorPageViewModel">
+             x:Class="Fridge_Shopping_app.FridgeEditorPage"
+             Title="Item in fridge"
+             x:DataType="loc:FridgeEditorPageViewModel">
 
     <ContentPage.BindingContext>
-        <loc:EditorPageViewModel />
+        <loc:FridgeEditorPageViewModel />
     </ContentPage.BindingContext>
 
     <ContentPage.Resources>
@@ -24,7 +24,7 @@
 
     <VerticalStackLayout Spacing="10">
         <Label Text="Name" Style="{StaticResource mainLabel}" />
-        <Entry Text="{Binding Item.Name}" Style="{StaticResource textInput}" />
+        <Entry Text="{Binding Item.Name}" Style="{StaticResource textInput}" Placeholder="Name of item" />
         <Label Text="Quantity" Style="{StaticResource mainLabel}" />
         <Entry Text="{Binding Item.Quantity}" Style="{StaticResource textInput}" />
         <Label Text="Expiration date" Style="{StaticResource mainLabel}" />
