Can add from shopping list to fridge
- Added new service that both the MainPage and ShoppingListPage can use, so that Shopping list can add items to fridge
- Changed bindingcontext to be set in xaml.cs

--- a/Fridge_Shopping_app/Fridge_Shopping_app/AppShell.xaml
+++ b/Fridge_Shopping_app/Fridge_Shopping_app/AppShell.xaml
@@ -24,7 +24,7 @@
         <ShellContent
         Title="Shopping List"
         ContentTemplate="{DataTemplate local:ShoppingListPage}"
-        Route="ShoppingList" />
+        Route="ShoppingListPage" />
     </FlyoutItem>
     
 </Shell>
