--- a/Fridge_Shopping_app/Fridge_Shopping_app/QuotasPage.xaml
+++ b/Fridge_Shopping_app/Fridge_Shopping_app/QuotasPage.xaml
@@ -8,20 +8,15 @@
 
 
     <ContentPage.Resources>
-        <!-- Sablonokat definiálhatunk erőforrásként, így mindkét listánál használhatjuk. -->
-        <!-- Egyszer kell megírni, mindkét lista elemei ugyanúgy fognak kinézni. -->
         <DataTemplate x:Key="quotasListCollectionItem" x:DataType="loc:FridgeItem">
             <Border Stroke="LightGray" StrokeThickness="1">
                 <Grid ColumnDefinitions="*, Auto, *" Padding="4">
                     <Label Text="{Binding Name}" Grid.Column="0" HorizontalOptions="Start"/>
-                    <Label Text="{Binding Quantity}" Grid.Column="1" HorizontalOptions="Center"/>
+                    <Label Text="{Binding Quantity, StringFormat='Desired quantity: {0}'}" Grid.Column="1" HorizontalOptions="Center"/>
                 </Grid>
             </Border>
         </DataTemplate>
 
-        <!-- Stílusokat is definiálhatunk erőforrásként. -->
-        <!-- Ha nem adunk meg kulcsot (x:Key), akkor az összes 'TargetType' típusú UI elemre vonatkozik. -->
-        <!-- Ha van kulcs, akkor csak azok a UI elemek veszik fel a stílust, melyeknél hivatkozunk rá. -->
         <Style TargetType="Border" x:Key="collectionBorder">
             <Setter Property="Stroke" Value="DarkSlateGray" />
             <Setter Property="StrokeThickness" Value="3" />
@@ -41,13 +36,11 @@
                 <Button Grid.Row="0" Grid.Column="2" Text="Delete" Command="{Binding DeleteItemCommand}" />
             </Grid>
 
-            <Border Style="{StaticResource collectionBorder}">
-                <CollectionView
+            <CollectionView
                 ItemsSource="{Binding ItemsOnQuota}"
                 SelectedItem="{Binding SelectedItem}"
                 SelectionMode="Single"
                 ItemTemplate="{StaticResource quotasListCollectionItem}" />
-            </Border>
 
         </VerticalStackLayout>
     </ScrollView>
