--- a/Fridge_Shopping_app/Fridge_Shopping_app/ShoppingListPage.xaml
+++ b/Fridge_Shopping_app/Fridge_Shopping_app/ShoppingListPage.xaml
@@ -8,8 +8,6 @@
 
 
     <ContentPage.Resources>
-        <!-- Sablonokat definiálhatunk erőforrásként, így mindkét listánál használhatjuk. -->
-        <!-- Egyszer kell megírni, mindkét lista elemei ugyanúgy fognak kinézni. -->
         <DataTemplate x:Key="shoppingListCollectionItem" x:DataType="loc:FridgeItem">
             <Border Stroke="LightGray" StrokeThickness="1">
                 <Grid ColumnDefinitions="*, Auto, *" Padding="4">
@@ -19,9 +17,6 @@
             </Border>
         </DataTemplate>
 
-        <!-- Stílusokat is definiálhatunk erőforrásként. -->
-        <!-- Ha nem adunk meg kulcsot (x:Key), akkor az összes 'TargetType' típusú UI elemre vonatkozik. -->
-        <!-- Ha van kulcs, akkor csak azok a UI elemek veszik fel a stílust, melyeknél hivatkozunk rá. -->
         <Style TargetType="Border" x:Key="collectionBorder">
             <Setter Property="Stroke" Value="DarkSlateGray" />
             <Setter Property="StrokeThickness" Value="3" />
@@ -35,20 +30,19 @@
         Padding="30,0"
         Spacing="10">
 
-            <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="1*,1*,1*" RowSpacing="20" ColumnSpacing="10">
+            <Grid RowDefinitions="Auto,Auto,Auto" ColumnDefinitions="1*,1*,1*" RowSpacing="20" ColumnSpacing="10">
                 <Button Grid.Row="0" Grid.Column="0" Text="New" Command="{Binding NewItemCommand}" />
                 <Button Grid.Row="0" Grid.Column="1" Text="Edit" Command="{Binding EditItemCommand}" />
                 <Button Grid.Row="0" Grid.Column="2" Text="Delete" Command="{Binding DeleteItemCommand}" />
                 <Button Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" Text="Add to fridge" BackgroundColor="DarkCyan" Command="{Binding AddItemToFridgeCommand}" />
+                <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Text="Share shopping list" BackgroundColor="Aquamarine" Command="{Binding ShareShoppingListCommand}" />
             </Grid>
 
-            <Border Style="{StaticResource collectionBorder}">
-                <CollectionView
+            <CollectionView
                 ItemsSource="{Binding ItemsOnShoppingList}"
                 SelectedItem="{Binding SelectedItem}"
                 SelectionMode="Single"
                 ItemTemplate="{StaticResource shoppingListCollectionItem}" />
-            </Border>
 
         </VerticalStackLayout>
     </ScrollView>
